13:14:02 wlan0: tx error 0x20, buf 31!
13:14:02 wlan0: tx error 0x20, buf 00!
13:14:13 wlan0: tx error 0x20, buf 01!
13:14:13 wlan0: tx error 0x20, buf 02!
13:14:13 wlan0: tx error 0x20, buf 03!
13:14:13 wlan0: tx error 0x20, buf 04!
13:14:13 wlan0: tx error 0x20, buf 05!
13:14:13 wlan0: tx error 0x20, buf 06!
13:14:13 wlan0: tx error 0x20, buf 07!
13:14:13 wlan0: tx error 0x20, buf 08!


[20051018] 0.3.14
* update for 2.6.14-rc4-mm1
* Kconfig bug (error if ACX=y, ACX_USB=y, USB=m) fixed
* PARANOID_LOCKING off by default

[20051016] 0.3.13
* Revert 20051013 fix, we have one which actually works.
  Thanks Jacek Jablonski <yacek87@gmail.com> for testing!

[20051013]
* trying to fix "yet another similar bug"
* usb fix by Carlos Martin

[20051012] 0.3.12
* acx_l_clean_tx_desc bug fixed - was stopping tx completely
  at high load. (It seems there exists yet another similar bug!)
* "unknown IE" dump was 2 bytes too short - fixed
* DUP logging made less noisy
* another usb fix by Carlos Martin <carlosmn@gmail.com>

[20051003]
* several usb fixes by Carlos Martin <carlosmn@gmail.com> - thanks!
* unknown IE logging made less noisy
* few unknown IEs added to the growing collection
* version bump to 0.3.11

[20050916]
* fix bogus MTU handling, add ability to change MTU
* fix WLAN_DATA_MAXLEN: 2312 -> 2304
* version bump to 0.3.10

[20050915]
* by popular request default mode is 'managed'
* empty handler for EID 7 (country info) is added
* fix 'timer not started - iface is not up'
* tx[host]desc micro optimizations
* version bump to 0.3.9

[20050914]
* tx[host]desc ring workings brought a bit back to two-hostdesc
  scheme. This is an attempt to fix weird WG311v2 bug.
  I still fail to understand how same chip with same fw can
  work for me but do not work for a WG311v2 owner. Mystery.
* README updated
* version bump to 0.3.8

[20050913]
* variable and fields with awful names renamed
* a few fields dropped (they had constant values)
* small optimization to acx_l_clean_tx_desc()