@@ -2383,6 +2383,160 @@ acx_l_process_rxbuf(wlandevice_t *priv, rxbuffer_t *rxbuf)
 
 
 /***********************************************************************
+** acx_l_handle_txrate_auto
+**
+** Theory of operation:
+** client->rate_cap is a bitmask of rates client is capable of.
+** client->rate_cfg is a bitmask of allowed (configured) rates.
+** It is set as a result of iwconfig rate N [auto]
+** or iwpriv set_rates "N,N,N N,N,N" commands.
+** It can be fixed (e.g. 0x0080 == 18Mbit only),
+** auto (0x00ff == 18Mbit or any lower value),
+** and code handles any bitmask (0x1081 == try 54Mbit,18Mbit,1Mbit _only_).
+**
+** client->rate_cur is a value for rate111 field in tx descriptor.
+** It is always set to txrate_cfg sans zero or more most significant
+** bits. This routine handles selection of new rate_cur value depending on
+** outcome of last tx event.
+**
+** client->rate_100 is a precalculated rate value for acx100
+** (we can do without it, but will need to calculate it on each tx).
+**
+** You cannot configure mixed usage of 5.5 and/or 11Mbit rate
+** with PBCC and CCK modulation. Either both at CCK or both at PBCC.
+** In theory you can implement it, but so far it is considered not worth doing.
+**
+** 22Mbit, of course, is PBCC always. */
+
+/* maps acx100 tx descr rate field to acx111 one */
+static u16
+rate100to111(u8 r)
+{
+	switch (r) {
+	case RATE100_1:	return RATE111_1;
+	case RATE100_2:	return RATE111_2;
+	case RATE100_5:
+	case (RATE100_5 | RATE100_PBCC511):	return RATE111_5;
+	case RATE100_11:
+	case (RATE100_11 | RATE100_PBCC511):	return RATE111_11;
+	case RATE100_22:	return RATE111_22;
+	default:
+		printk("acx: unexpected acx100 txrate: %u! "
+			"Please report\n", r);
+		return RATE111_2;
+	}
+}
+
+
+void
+acx_l_handle_txrate_auto(wlandevice_t *priv, struct client *txc,
+			u8 rate100, u16 rate111, u8 error)
+{
+	u16 sent_rate;
+	u16 cur = txc->rate_cur;
+	int slower_rate_was_used;
+
+	/* FIXME: need to implement some kind of rate success memory
+	 * which stores the success percentage per rate, to be taken
+	 * into account when considering allowing a new rate, since it
+	 * doesn't really help to stupidly count fallback/stepup,
+	 * since one invalid rate will spoil the party anyway
+	 * (such as 22M in case of 11M-only peers) */
+
+	/* vda: hmm. current code will do this:
+	** 1. send packets at 11 Mbit, stepup++
+	** 2. will try to send at 22Mbit. hardware will see no ACK,
+	**    retries at 11Mbit, success. code notes that used rate
+	**    is lower. stepup = 0, fallback++
+	** 3. repeat step 2 fallback_count times. Fall back to
+	**    11Mbit. go to step 1.
+	** If stepup_count is large (say, 16) and fallback_count
+	** is small (3), this wouldn't be too bad wrt throughput */
+
+	/* do some preparations, i.e. calculate the one rate that was
+	 * used to send this packet */
+	if (IS_ACX111(priv)) {
+		sent_rate = 1 << highest_bit(rate111 & RATE111_ALL);
+	} else {
+		sent_rate = rate100to111(rate100);
+	}
+	/* sent_rate has only one bit set now, corresponding to tx rate
+	 * which was used by hardware to tx this particular packet */
+
+	/* now do the actual auto rate management */
+	acxlog(L_DEBUG, "tx: %sclient=%p/"MACSTR" used=%04X cur=%04X cfg=%04X "
+		"__=%u/%u ^^=%u/%u\n",
+		(txc->ignore_count > 0) ? "[IGN] " : "",
+		txc, MAC(txc->address), sent_rate, cur, txc->rate_cfg,
+		txc->fallback_count, priv->fallback_threshold,
+		txc->stepup_count, priv->stepup_threshold
+	);
+
+	/* we need to ignore old packets already in the tx queue since
+	 * they use older rate bytes configured before our last rate change,
+	 * otherwise our mechanism will get confused by interpreting old data.
+	 * Do it here only, in order to have the logging above */
+	if (txc->ignore_count) {
+		txc->ignore_count--;
+		return;
+	}
+
+	/* true only if the only nonzero bit in sent_rate is
+	** less significant than highest nonzero bit in cur */
+	slower_rate_was_used = ( cur > ((sent_rate<<1)-1) );
+
+	if (slower_rate_was_used || (error & 0x30)) {
+		txc->stepup_count = 0;
+		if (++txc->fallback_count <= priv->fallback_threshold)
+			return;
+		txc->fallback_count = 0;
+
+		/* clear highest 1 bit in cur */
+		sent_rate = RATE111_54;
+		while (!(cur & sent_rate)) sent_rate >>= 1;
+		CLEAR_BIT(cur, sent_rate);
+
+		if (cur) { /* we can't disable all rates! */
+			acxlog(L_XFER, "tx: falling back to ratemask %04X\n", cur);
+			txc->rate_cur = cur;
+			txc->ignore_count = TX_CNT - priv->tx_free;
+		}
+	} else if (!slower_rate_was_used) {
+		txc->fallback_count = 0;
+		if (++txc->stepup_count <= priv->stepup_threshold)
+			return;
+		txc->stepup_count = 0;
+
+		/* sanitize. Sort of not needed, but I dont trust hw that much...
+		** what if it can report bogus tx rates sometimes? */
+		while (!(cur & sent_rate)) sent_rate >>= 1;
+		/* try to find a higher sent_rate that isn't yet in our
+		 * current set, but is an allowed cfg */
+		while (1) {
+			sent_rate <<= 1;
+			if (sent_rate > txc->rate_cfg)
+				/* no higher rates allowed by config */
+				return;
+			if (!(cur & sent_rate) && (txc->rate_cfg & sent_rate))
+				/* found */
+				break;
+			/* not found, try higher one */
+		}
+		SET_BIT(cur, sent_rate);
+		acxlog(L_XFER, "tx: stepping up to ratemask %04X\n", cur);
+		txc->rate_cur = cur;
+		/* FIXME: totally bogus - we could be sending to many peers at once... */
+		txc->ignore_count = TX_CNT - priv->tx_free;
+	}
+
+	/* calculate acx100 style rate byte if needed */
+	if (IS_ACX100(priv)) {
+		txc->rate_100 = bitpos2rate100[highest_bit(cur)];
+	}
+}
+
+
+/***********************************************************************
 ** acx_i_start_xmit
 **
 ** Called by network core. Can be called outside of process context.
@@ -3941,8 +4095,8 @@ acx_l_process_authen(wlandevice_t *priv, const wlan_fr_authen_t *req)
 
 	if (priv->auth_alg <= 1) {
 		if (priv->auth_alg != alg) {
-			acxlog(L_ASSOC, "authentication algorithm mismatch: "
-				"want: %d, req: %d\n", priv->auth_alg, alg);
+			acxlog(L_ASSOC, "auth algorithm mismatch: "
+				"our:%d peer:%d\n", priv->auth_alg, alg);
 			result = NOT_OK;
 			goto end;
 		}
@@ -4168,7 +4322,7 @@ acx_l_transmit_authen2(wlandevice_t *priv, const wlan_fr_authen_t *req,
 		goto bad;
 	body = (void*)(head + 1);
 
-	head->fc = WF_FSTYPE_AUTHENi; /* 0xb0 */
+	head->fc = WF_FSTYPE_AUTHENi;
 	head->dur = req->hdr->dur;
 	MAC_COPY(head->da, req->hdr->a2);
 	/* MAC_COPY(head->sa, req->hdr->a1); */
